--- a/package.json
+++ b/package.json
@@ -14,4 +14,9 @@
     "dependencies": {
         "bootstrap": "^5.3.3"
     }
+    {
+  "scripts": {
+    "build": "[my-framework] build --output public"
+  }
+}
 }
